# llmcapa

./: .gitignore  DEVELOP.ja.md  DEVELOP.md  LICENSE  README.ja.md  README.md  REASONING_NOTES.md  REQUIREMENTS.md  _deepseek_pricing.txt  _gpt56_preview.txt  _mistral_models.txt  _openai_models.txt  _openai_pricing.txt  _openai_raw.txt  _scratch_openrouter_models.json  azure_foundry_models.csv  llmcapa_improvements.md  provider_update_log.md  pyproject.toml  pyproject.toml.org  pyproject.toml.org1
docs/: azure_catalog_api.md  azure_catalog_api.md.org  catalog_data_sources.md
scripts/: _add_license_type.py  _add_minimax.py  _apply_and_log.py  _fetch_azure_catalog.py  _fetch_openai.py  _fix_all.py  _fix_broken_jsons.py  _fix_license_v2.py  _fix_moonshot.py  _scrape_anthropic.py  _scrape_azure_catalog.py  _scrape_azure_foundry_full.py  _scrape_azure_pricing.py  _scrape_deepseek.py  _scrape_google.py  _scrape_huggingface.py  _scrape_kimi.py  _scrape_kimi_pricing.py  _scrape_kimi_tabs.py  _scrape_lmstudio.py  _scrape_lmstudio.py.org  _scrape_lmstudio.py.org1  _scrape_major_providers.py  _scrape_mistral.py  _scrape_more.py  _scrape_novita.py  _scrape_nvidia.py  _scrape_qwen.py  _scrape_remaining.py  _scrape_xai.py  _update_all_providers.py  _update_amazon.py  _update_anthropic.py  _update_azure_cohere.py  _update_azure_foundry.py  _update_deepseek.py  _update_google.py  _update_japanese.py  _update_meta.py  _update_microsoft.py  (+13 more)
src/llmcapa/: __init__.py  __init__.py.org  __init__.py.org1  cli.py  models.py  registry.py  tokenizer.py
src/llmcapa/data/: __init__.py  amazon.json  anthropic.json  azure_foundry.json  deepseek.json  google.json  huggingface.json  japanese.json  lmstudio.json  meta.json  meta.json.org  microsoft.json  minimax.json  mistral.json  moonshot.json  novita.json  nvidia.json  ollama.json  openai.json  openai.json.org  openrouter.json  qwen.json  sakana.json  sakura.json  xai.json  xai.json.org  xiaomi.json
tests/: test_advanced.py  test_cache.py  test_registry.py
