[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcapa"
version = "0.1.0"
description = "Lookup capabilities (context window, modalities, features) of various LLM models offline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Hirofumi Ukawa", email = "hirofumi@ukawa.biz" }]
keywords = ["llm", "capability", "openai", "anthropic", "gemini", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
llmcapa = "llmcapa.cli:main"

[project.urls]
Homepage = "https://example.com/llmcapa"

[tool.hatch.build.targets.wheel]
packages = ["src/llmcapa"]
