[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcapa"
version = "0.2.7"
description = "Lookup capabilities (context window, modalities, features) of various LLM models offline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Hirofumi Ukawa", email = "hirofumi@ukawa.biz" }]
keywords = ["llm", "capability", "openai", "anthropic", "gemini", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
llmcapa = "llmcapa.cli:main"

[project.urls]
Homepage = "https://github.com/awaku7/llmcapa"
Repository = "https://github.com/awaku7/llmcapa"
"Bug Tracker" = "https://github.com/awaku7/llmcapa/issues"

[project.optional-dependencies]
openai = ["tiktoken>=0.5.0"]
gemini = ["sentencepiece>=0.2.0"]
all = ["tiktoken>=0.5.0", "sentencepiece>=0.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmcapa"]
